<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/tab_devices"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="8dp"
    tools:parentTag="android.widget.RelativeLayout">

    <TextView
        android:id="@+id/label_comm_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/comm_device" />

    <TextView
        android:id="@+id/textview_comm_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toEndOf="@id/label_comm_device" />

    <ListView
        android:id="@+id/listview_bonded_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/label_target_device"
        android:layout_below="@id/label_comm_device"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/label_target_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_refresh_connected_devices"
        android:layout_alignParentStart="true"
        android:text="@string/target_device" />

    <TextView
        android:id="@+id/textview_target_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/button_refresh_connected_devices"
        android:layout_toEndOf="@id/label_target_device" />

    <Button
        android:id="@+id/button_refresh_connected_devices"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:text="@string/refresh_connected_devices" />

    <Button
        android:id="@+id/button_write_to_non_atak"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:text="@string/write_to_non_atak" />

    <Button
        android:id="@+id/button_set_comm_device"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/set_comm_device" />
</merge>
