<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/tab_advanced"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <EditText
        android:id="@+id/edittext_default_purge_time_mins"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_set_default_purge_time_ms"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/set_msg_block_ttl_mins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edittext_default_purge_time_mins"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/edittext_pli_purge_time_s"
        android:layout_width="64dp"
        android:layout_height="wrap_content"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_default_purge_time_mins" />

    <Button
        android:id="@+id/button_set_pli_purge_time_ms"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/set_pli_block_ttl_s"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/edittext_pli_purge_time_s"
        app:layout_constraintTop_toBottomOf="@+id/button_set_default_purge_time_ms" />

    <Button
        android:id="@+id/button_clear_message_cache"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/clear_message_cache"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_pli_purge_time_s" />

    <Button
        android:id="@+id/button_clear_message_queue"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="8dp"
        android:text="@string/clear_message_queue"
        app:layout_constraintBottom_toTopOf="@+id/button_clear_data"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_clear_message_cache"
        app:layout_constraintVertical_bias="0.003" />

    <Button
        android:id="@+id/button_clear_data"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:text="@string/clear_data"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>